@@ -1,4 +1,5 @@
 0.82.1
+ * Fixed a bug where using the wrong encryption key first caused the right key to be seen as invalid.
  * Fixed a bug where String fields were ignored when updating objects from JSON with null values.
  * Fixed a bug when calling System.exit(0), the process might hang.
 
